fix project field from showing white space during overflow

--- a/src/style.sass
+++ b/src/style.sass
@@ -37,7 +37,6 @@ $burnt-sienna: #e76f51ff
     flex-direction: column
     gap: 10px
     color: white
-    height: 100vh
     background-color: $charcoal
     padding: 10px
     &__item
@@ -162,6 +161,7 @@ $burnt-sienna: #e76f51ff
     &__add-button
         padding: 8px
         margin-top: 10px
+        margin-bottom: 27px
 
 .task-form
     padding: .9rem
